fix: security config